# idapt

./: .env  .gitignore  DockerFile  Dockerfile  LICENSE  README.md  dev.docker-compose.yml  dev.env  dev.local.docker-compose.yml  docker-compose.yml  entrypoint.sh  local.docker-compose.yml  local.frontend.docker-compose.yml  master.env  package-lock.json  package.json  staticwebapp.config.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  dev.Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 229dcd101018_add_file_id_to_embeddings.py
backend/app/: config.py  llmhub.py  observability.py  proxy.py  pull_ollama_models.py  settings.py
backend/app/api/: __init__.py  aes_gcm_file_encryption.py  certs.py  cors.py  db_sessions.py  dependencies.py  fernet_stored_encryption_key.py  logging.py  migration_manager.py  mount_user_data_dir.py  observability.py  user_path.py  utils.py  websocket.py
backend/app/api/models/: file_models.py  models.py
backend/app/api/routers/: __init__.py  chat.py  chat_config.py  data_generation.py  datasources.py  events.py  file_manager.py  generate.py  health.py  models.py  ollama_status.py  processing.py  processing_stacks.py  settings.py  upload.py  vault.py  vercel_response.py
backend/app/api/services/: suggestion.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/chat/: chat.py  chat_config.py  chat_models.py  events.py  file.py  router.py  schemas.py  service.py  suggestion.py  title.py  upload.py  vercel_response.py
backend/app/constants/: file_extensions.py
backend/app/database/: alembic.ini  connection.py  env.py  init_db.py  migration_manager.py  models.py  service.py  utils.py
backend/app/database/alembic/: alembic.ini  env.py
backend/app/database/initialization/: database_initializer.py  migration_manager.py  password_manager.py
backend/app/database/utils/: migration_manager.py  service.py  utils.py
backend/app/datasources/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/datasources/chats/: dependencies.py  router.py  schema.py  schemas.py  service.py  utils.py
backend/app/datasources/database/: env.py  models.py  session.py
backend/app/datasources/file_manager/: dependencies.py  router.py  schemas.py  utils.py
backend/app/engine/: docdb.py  document_db.py  engine.py  generate.py  index.py  node_processor.py  query_filter.py  react_agent_system_prompt.md  storage_context.py  vectordb.py
backend/app/engine/ingestion/: pipeline.py  processor.py  types.py  zettlekasten_extractor.py  zettlekasten_index.py
backend/app/engine/loaders/: __init__.py  db.py  file.py  (+1 more)
backend/app/file_manager/: db_file.py  file_system.py  llama_index.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/ollama_status/: router.py  schemas.py  service.py
backend/app/processing/: router.py  schema.py  schemas.py  service.py
backend/app/processing_stacks/: models.py  router.py  schemas.py  service.py  utils.py
backend/app/services/: __init__.py  data_generation.py  database.py  datasource.py  db_data_manager.py  db_file.py  file.py  file_manager.py  file_system.py  generate.py  generate_worker.py  ingestion_pipeline.py  llama_index.py  ollama_status.py  processing.py  processing_stacks.py  settings.py  user_path.py
backend/app/settings/: app_settings.py  llama_index_settings.py  manager.py  model_initialization.py  model_providers.py  models.py  router.py  schemas.py  service.py  utils.py
backend/config/: loaders.yaml  ollama_models.yaml  tools.yaml
backend/data/: 'LifeQuest'_App_Mayhem.md  'LifeQuest'_Takes_Off.md  30_Days_of_Novelty_Challenge.md  A_Day_of_Defiance.md  A_Life_in_Transition.md  A_Morning_Smoothie.md  A_Mosaic_of_Moments.md  A_Murky_Experiment.md  A_Night_Under_the_Stars.md  A_Rough_Morning.md  An_Unplanned_Day.md  Balancing_Personal_Ambition_and_Communal_Good.md  Beautiful_Flux.md  Birdsong_Wakes_Me_Up.md  Capturing_the_Northern_Lights_in_VR.md  Catching_Up_on_Gallery_Work_(Maybe).md  Clara's_Call_About_Multimedia_Home_Project.md  Clara's_Underground_Gig_and_Music_with_VR.md  Clara's_Venue_Crisis.md  Climate_Summit_Speech_Preparation.md  Community_Garden_Initiative.md  Community_Garden_Visit_and_Mural_Concept.md  Countless_Small_Victories_and_Joys.md  Cultural_Celebrations.md  Discovering_Hidden_Waterfalls.md  Edible_Containers_Café_Experience.md  Edible_Cutlery_at_'The_Green_Spoon'.md  Embracing_Change.md  Embracing_Novelty_with_Clay_Sculpture.md  Emotional_Painting_Installation.md  Feeling_Cautious.md  Final_Touches_at_the_Gallery.md  Finding_Art_in_Life's_Unpredictability.md  Finding_Clarity_on_an_Old_Bridge.md  Foodie_Adventure.md  Freedom_from_Routine.md  Fusion_Tacos_and_Flash_Fiction.md  Future_Plans_and_Fears.md  Gallery_Deadline_Anxiety.md  Gallery_Ideas_Strike.md  (+63 more)
(+507 files in other folders)
