[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.5"
python-dotenv = "^1.0.1"
aiostream = "^0.6.4"
cachetools = "^5.5.0"
llama-index = "^0.12.1"
llama-index-vector-stores-postgres = "^0.3.0"
llama-index-readers-database = "^0.3.0"
psycopg2-binary = "^2.9.10"
duckduckgo-search = "6.3.5"
llama-index-tools-wikipedia = "^0.3.0"
xhtml2pdf = "^0.2.16"
markdown = "^3.7"
llama-index-llms-ollama = "^0.4.0"
llama-index-embeddings-ollama = "^0.4.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
sse-starlette = "^2.1.3"
llama-index-storage-docstore-postgres = "^0.3.0"
httpx = "^0.27.2"
llama-index-postprocessor-colbert-rerank = "^0.3.0"
llama-index-storage-index-store-postgres = "^0.4.0"
llama-index-llms-text-generation-inference = "^0.3.0"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.32.1"

[tool.poetry.dependencies.pymysql]
version = "^1.1.1"
extras = [ "rsa" ]

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"
exclude = [ "tests", "venv", ".venv", "output", "config" ]
check_untyped_defs = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
implicit_optional = true
strict_optional = false
disable_error_code = [ "return-value", "assignment" ]

[[tool.mypy.overrides]]
module = "app.*"
ignore_missing_imports = false

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"