[tool]
[tool.poetry]
name = "idapt"
package-mode = false

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
fastapi = "^0.115.5"
aiostream = "^0.6.4"
llama-index-core = "^0.12.11"
llama-index-readers-file = "^0.4.3"
llama-index-llms-ollama = "^0.4.0"
llama-index-llms-openai = "^0.3.13"
llama-index-embeddings-ollama = "^0.4.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-vector-stores-chroma = "^0.4.1"
xhtml2pdf = "^0.2.16"
markdown = "^3.7"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
httpx = "^0.27.2"
filelock = "^3.16.1"
sse-starlette = "^2.2.1"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.32.1"

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[tool.mypy]
python_version = "3.12"
plugins = "pydantic.mypy"
exclude = [ "tests", "venv", ".venv", "output", "config" ]
check_untyped_defs = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
implicit_optional = true
strict_optional = false
disable_error_code = [ "return-value", "assignment" ]

[[tool.mypy.overrides]]
module = "app.*"
ignore_missing_imports = false

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"